model: Switching from multi-source to single-source
This commit changes the model from multi-source to single-source (i.e
one source - one agent).
